--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ before_script:
 
   # Install Drupal
   - cp travis.config.sh config.sh
-  - ./install -dy
+  # - ./install -dy
 
   # Install Jekyll
   - cd jekyll
