--- a/.travis.yml
+++ b/.travis.yml
@@ -63,8 +63,8 @@ before_script:
   - sleep 3 # give xvfb some time to start
 
   # start a web server on port 8080, run in the background; wait for initialization
-  - drush @site runserver 127.0.0.1:8080 &
-  - until netstat -an 2>/dev/null | grep '8080.*LISTEN'; do true; done
+  # - drush @site runserver 127.0.0.1:8080 &
+  # - until netstat -an 2>/dev/null | grep '8080.*LISTEN'; do true; done
 
   # Run selenium.
   - wget http://selenium-release.storage.googleapis.com/2.40/selenium-server-standalone-2.40.0.jar
