--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ before_script:
 
   # Install Drupal
   - cp travis.config.sh config.sh
-  - ./install -dy
+  # - ./install -dy
 
   # Install Jekyll
   - cd jekyll
@@ -52,7 +52,7 @@ before_script:
 
   # Install Behat
   - cd behat
-  - cp aliases.drushrc.php ~/.drush/
+  # - cp aliases.drushrc.php ~/.drush/
   - cp behat.local.yml.travis behat.local.yml
   - composer install
   - cd ..
@@ -63,8 +63,8 @@ before_script:
   - sleep 3 # give xvfb some time to start
 
   # start a web server on port 8080, run in the background; wait for initialization
-  - drush @site runserver 127.0.0.1:8080 &
-  - until netstat -an 2>/dev/null | grep '8080.*LISTEN'; do true; done
+  # - drush @site runserver 127.0.0.1:8080 &
+  # - until netstat -an 2>/dev/null | grep '8080.*LISTEN'; do true; done
 
   # Run selenium.
   - wget http://selenium-release.storage.googleapis.com/2.40/selenium-server-standalone-2.40.0.jar
