--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: php
 
 php:
-  - 5.4
+  - 5.5
 
 mysql:
   database: drupal
@@ -10,7 +10,18 @@ mysql:
 
 before_install:
   - sudo apt-get update > /dev/null
-  - composer self-update
+  - composer self-update 1.0.0-alpha9
+
+  # Install Bower, Grunt and CasperJs.
+  - npm install -g bower grunt-cli casperjs
+
+  # Install Sass and Compass for Grunt to work.
+  - gem install compass
+
+  # Configure imgur bash script to upload images on failure.
+  - npm install -g jshon
+  - chmod +x imgur
+  - chmod +x install
 
 install:
   # install php packages required for running a web server from drush on php 5.3
@@ -18,38 +29,41 @@ install:
 
   # install drush
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
-  - composer global require drush/drush:6.*@dev
+  - composer global require drush/drush:6.*
   - phpenv rehash
 
 before_script:
-  - cp default.config.sh config.sh
-  - bash scripts/ci/setup
-  - bash scripts/build
-  - cd www
-  - drush si haskala --db-url=mysql://root:@127.0.0.1/drupal --account-pass=admin --yes
-  - drush cc all --yes
-  # Use drush migrate command to import dummy content, as user 1, so we don't have node access issues.
-  # - drush mi --all --user=1
 
+  # Install Drupal
+  - cp travis.config.sh config.sh
+  - ./install -dy
+
+  # Install Jekyll
+  - cd jekyll
+  - npm install
+  - bower install
+  - grunt serve > ~/grunt.log 2>&1 &
   - cd ..
 
-  # Create a behat configuration file.
-  - cd haskala/behat
-  - cp behat.local.yml.travis behat.local.yml
+  # Install PhantomCSS
+  - cd phantomcss
+  - npm install
+  - cd ..
 
-  # Create Drush alias.
+  # Install Behat
+  - cd behat
   - cp aliases.drushrc.php ~/.drush/
-  - composer install --prefer-source
+  - cp behat.local.yml.travis behat.local.yml
+  - composer install
+  - cd ..
 
-
-script:
   # Create display.
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - sleep 3 # give xvfb some time to start
 
   # start a web server on port 8080, run in the background; wait for initialization
-  - drush @haskala runserver 127.0.0.1:8080 &
+  - drush @site runserver 127.0.0.1:8080 &
   - until netstat -an 2>/dev/null | grep '8080.*LISTEN'; do true; done
 
   # Run selenium.
@@ -57,4 +71,23 @@ script:
   - java -jar selenium-server-standalone-2.40.0.jar -p 4444 &
   - sleep 5
 
+script:
+
+  # Run PhantomCSS tests.
+  - cd phantomcss
+  - casperjs test homepage.js
+
+  # Upload failed images to imgur
+  # - bash $TRAVIS_BUILD_DIR/imgur ./failures/login-form_0.fail.png
+  # - bash $TRAVIS_BUILD_DIR/imgur ./failures/authors-list_1.fail.png
+
+  # Run phantomJs.
+  - phantomjs --webdriver=4444 > ~/phantomjs.log 2>&1 &
+
+  # Run behat tests.
+  - cd ../behat
   - ./bin/behat --tags=~@wip
+
+  # Print logs.
+  - cat ~/grunt.log
+  - cat ~/phantomjs.log
