--- a/.travis.yml
+++ b/.travis.yml
@@ -76,6 +76,7 @@ script:
   # Run PhantomCSS tests.
   - cd phantomcss
   - casperjs test homepage.js
+  - casperjs test bookpage.js
 
   # Upload failed images to imgur
   # - bash $TRAVIS_BUILD_DIR/imgur ./failures/login-form_0.fail.png
