--- a/behat/behat.yml
+++ b/behat/behat.yml
@@ -8,7 +8,7 @@ default:
     Behat\MinkExtension:
       goutte: ~
       selenium2: ~
-      base_url: "http://localhost:9000/"
+      base_url: "http://localhost/haskala/www"
     Drupal\DrupalExtension:
       blackbox: ~
       api_driver: "drupal"
