--- a/behat/behat.local.yml.example
+++ b/behat/behat.local.yml.example
@@ -1,5 +1,7 @@
 default:
   extensions:
+    Behat\MinkExtension:
+      base_url: "http://localhost/haskala/www"
     Drupal\DrupalExtension:
       drupal:
         drupal_root: "/var/www/haskala/www"
