--- a/.travis.yml
+++ b/.travis.yml
@@ -76,8 +76,8 @@ script:
   # Run PhantomCSS tests.
   - cd phantomcss
   - casperjs test homepage.js
-  - casperjs test bookspage.js
-  - casperjs test bookpage.js
+  - casperjs test books.js
+  - casperjs test book.js
 
 
   # Upload failed images to imgur
