--- a/.travis.yml
+++ b/.travis.yml
@@ -76,7 +76,9 @@ script:
   # Run PhantomCSS tests.
   - cd phantomcss
   - casperjs test homepage.js
-  - casperjs test bookpage.js
+  - casperjs test books.js
+  - casperjs test book.js
+
 
   # Upload failed images to imgur
   # - bash $TRAVIS_BUILD_DIR/imgur ./failures/login-form_0.fail.png
