--- a/.travis.yml
+++ b/.travis.yml
@@ -80,9 +80,9 @@ script:
   - casperjs test books.js
   - casperjs test book.js
   # drupal
-  homepage-drupal.js
+  - homepage-drupal.js
 
-  
+
   # Upload failed images to imgur
   # - bash $TRAVIS_BUILD_DIR/imgur ./failures/login-form_0.fail.png
   # - bash $TRAVIS_BUILD_DIR/imgur ./failures/authors-list_1.fail.png
