--- a/.travis.yml
+++ b/.travis.yml
@@ -75,9 +75,13 @@ script:
 
   # Run PhantomCSS tests.
   - cd phantomcss
+  # jekyll
   - casperjs test homepage.js
   - casperjs test books.js
   - casperjs test book.js
+  # drupal
+  - casperjs test homepage-drupal.js
+
 
   # Upload failed images to imgur
   # - bash $TRAVIS_BUILD_DIR/imgur ./failures/login-form_0.fail.png
