--- a/.travis.yml
+++ b/.travis.yml
@@ -86,7 +86,7 @@ script:
 
 
   # Upload failed images to imgur
-  # - bash $TRAVIS_BUILD_DIR/imgur ./failures/login-form_0.fail.png
+  - bash $TRAVIS_BUILD_DIR/imgur ./screenshots/drupal-homepage-search_2.png
   # - bash $TRAVIS_BUILD_DIR/imgur ./failures/authors-list_1.fail.png
 
   # Run phantomJs.
