--- a/.travis.yml
+++ b/.travis.yml
@@ -86,8 +86,9 @@ script:
 
 
   # Upload failed images to imgur
-#  - bash $TRAVIS_BUILD_DIR/imgur ./screenshots/drupal-homepage-tags-cloud-wrapper_3.png
-#  - bash $TRAVIS_BUILD_DIR/imgur ./failures/drupal-homepage-tags-cloud-wrapper_3.fail.png
+  - bash $TRAVIS_BUILD_DIR/imgur ./screenshots/drupal-homepage-tags-cloud-wrapper_5.png
+  - bash $TRAVIS_BUILD_DIR/imgur ./screenshots/drupal-homepage-search_4.png
+  - bash $TRAVIS_BUILD_DIR/imgur ./screenshots/drupal-homepage-content_2.png
 
   # Run phantomJs.
   - phantomjs --webdriver=4444 > ~/phantomjs.log 2>&1 &
