--- a/.travis.yml
+++ b/.travis.yml
@@ -87,6 +87,8 @@ script:
 
   # Upload failed images to imgur
   #- bash $TRAVIS_BUILD_DIR/imgur ./screenshots/drupal-homepage-tags-cloud-wrapper_5.png
+  - bash $TRAVIS_BUILD_DIR/imgur ./failures/drupal-homepage-tags-cloud-wrapper_5.fail.png
+  - bash $TRAVIS_BUILD_DIR/imgur ./failures/drupal-homepage-content_2.fail.png
 
   # Run phantomJs.
   - phantomjs --webdriver=4444 > ~/phantomjs.log 2>&1 &
