--- a/.travis.yml
+++ b/.travis.yml
@@ -86,9 +86,7 @@ script:
 
 
   # Upload failed images to imgur
-  - bash $TRAVIS_BUILD_DIR/imgur ./screenshots/drupal-homepage-site-name_0.png
-  - bash $TRAVIS_BUILD_DIR/imgur ./screenshots/drupal-homepage-content_2.png
-  - bash $TRAVIS_BUILD_DIR/imgur ./screenshots/drupal-homepage-tags-cloud-wrapper_5.png
+  #- bash $TRAVIS_BUILD_DIR/imgur ./screenshots/drupal-homepage-tags-cloud-wrapper_5.png
 
   # Run phantomJs.
   - phantomjs --webdriver=4444 > ~/phantomjs.log 2>&1 &
