--- a/.travis.yml
+++ b/.travis.yml
@@ -86,7 +86,7 @@ script:
 
 
   # Upload failed images to imgur
-  #- bash $TRAVIS_BUILD_DIR/imgur ./screenshots/drupal-homepage-tags-cloud-wrapper_5.png
+  - bash scan_phantomcss_fails.sh > ~/phantomcss.log 2>&1 &
 
   # Run phantomJs.
   - phantomjs --webdriver=4444 > ~/phantomjs.log 2>&1 &
@@ -98,3 +98,4 @@ script:
   # Print logs.
   - cat ~/grunt.log
   - cat ~/phantomjs.log
+  - cat ~/phantomcss.log
