--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,11 @@ mysql:
   username: root
   encoding: utf8
 
+env:
+  global:
+  - secure: "IMZuE8kgR/r793TL0oyQtld/GfgFfRSHZi1nw8QbNOSzVPB3F6RJpwLK3XILuNdaWHwdnIPHm+aOoRqz+fRovmqqbHGDrmWx4g4xYLquBLp/rAksQD6whmBkE6TPnue/UzwligxBr0XzJ7GdmmEorhIo+qFzjr92Xwp86ME60d4="
+  - secure: "YJi/Abc+p1hMtGWPRnfrRDhfNIuxXRACQ7QxWHS9uHrYvdvkiqsxChcJuOZZ6Ga4At5G88nMAzdzF3xDqzF0FRI0rs6D5jLSudvMoC4rAs/u+ghN8feBBHi6yPqebfwjEPCl8HljeWrFUTf8EJBJLYxBCSuz9TjO2z7yuz2roSs="
+
 before_install:
   - sudo apt-get update > /dev/null
   - composer self-update
