--- a/.travis.yml
+++ b/.travis.yml
@@ -89,12 +89,15 @@ script:
   # drupal
   - casperjs test homepage-drupal.js
 
-
   # Upload failed images to imgur
   - bash scan_phantomcss_fails.sh > ~/phantomcss.log 2>&1 &
 
   # Run phantomJs.
   - phantomjs --webdriver=4444 > ~/phantomjs.log 2>&1 &
+
+  # Run WebDriverCss tests
+  - cd ../webdrivercss
+  - node wdcss.js
 
   # Run behat tests.
   - cd ../behat
