--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
   global:
   - secure: "IMZuE8kgR/r793TL0oyQtld/GfgFfRSHZi1nw8QbNOSzVPB3F6RJpwLK3XILuNdaWHwdnIPHm+aOoRqz+fRovmqqbHGDrmWx4g4xYLquBLp/rAksQD6whmBkE6TPnue/UzwligxBr0XzJ7GdmmEorhIo+qFzjr92Xwp86ME60d4="
   - secure: "YJi/Abc+p1hMtGWPRnfrRDhfNIuxXRACQ7QxWHS9uHrYvdvkiqsxChcJuOZZ6Ga4At5G88nMAzdzF3xDqzF0FRI0rs6D5jLSudvMoC4rAs/u+ghN8feBBHi6yPqebfwjEPCl8HljeWrFUTf8EJBJLYxBCSuz9TjO2z7yuz2roSs="
+  - secure: "Cz5WUtEnosATTanZ5Qqft5kbJSvM374ig6uOJjj35N0B1acHUJoXBYcyvc7gHjIf+iDU6xHxgyMsDwTXyVD/eQsIpzpThDRxHv92w/w0gKmtYSnn4D+ZZ9N5l3uP6dtyChXLqf/k95R0O2Cg/AdtTHv9ipI+LW+trRGgt0Z5fas="
 
 before_install:
   - sudo apt-get update > /dev/null
@@ -36,6 +37,8 @@ install:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
   - composer global require drush/drush:6.*
   - phpenv rehash
+
+  - npm install -g ngrok
 
 before_script:
 
@@ -76,7 +79,10 @@ before_script:
   # Run selenium.
   - wget http://selenium-release.storage.googleapis.com/2.40/selenium-server-standalone-2.40.0.jar
   - java -jar selenium-server-standalone-2.40.0.jar -p 4444 &
-  - sleep 5
+
+  # Run ngrok
+  - ngrok -authtoken=$NGROK_AUTHTOKEN -log=stdout -subdomain=$TRAVIS_COMMIT 9000 > ~/ngrok.log 2>&1 &
+  - until $(curl --output /dev/null --silent --head --fail http://$TRAVIS_COMMIT.ngrok.com); do sleep 1; echo '.'; done
 
 script:
 
@@ -97,6 +103,7 @@ script:
 
   # Run WebDriverCss tests
   - cd ../webdrivercss
+  - npm install
   - node wdcss.js
 
   # Run behat tests.
