--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,6 @@ script:
 
   # Run WebDriverCss tests
   - cd ./webdrivercss
-  - mkdir webdrivercss
-  - chmod 777 webdrivercss
+  - chmod -R 777 webdrivercss
   - npm install
   - node wdcss.js
