--- a/.travis.yml
+++ b/.travis.yml
@@ -84,6 +84,8 @@ script:
   # drupal
   - casperjs test homepage-drupal.js
 
+  - bash $TRAVIS_BUILD_DIR/imgur ./screenshots/top-navigation_0.png
+  - bash $TRAVIS_BUILD_DIR/imgur ./screenshots/books-filter_2.png
 
   # Upload failed images to imgur
   - bash scan_phantomcss_fails.sh > ~/phantomcss.log 2>&1 &
