--- a/.travis.yml
+++ b/.travis.yml
@@ -84,7 +84,7 @@ script:
   # drupal
   - casperjs test homepage-drupal.js
 
-  - bash $TRAVIS_BUILD_DIR/imgur ./screenshots/main-content_4.png
+  #  - bash $TRAVIS_BUILD_DIR/imgur ./screenshots/main-content_4.png
 
   # Upload failed images to imgur
   - bash scan_phantomcss_fails.sh > ~/phantomcss.log 2>&1 &
